Make upstream unpacker compatible with Java 17 Android